--- a/index2.html
+++ b/index2.html
@@ -286,7 +286,7 @@
                                 <h6 class="styled-text">JavaScript (Node.js)</h6>
                                 <ul>
                                     <li>Express.js</li>
-                                    <li>NestJS</li>
+                                    <li>Next.js</li>
                                     <li>Sails.js</li>
                                     <li>Meteor</li>
                                 </ul>
